fix: Забыл фотку добавить.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
                     <p><em>Email: </em><a href="mailto: Kobra.ven213@gmail.com">Kobra.ven213@gmail.com</a></p>
                 </div>
             </div>
+            <div class="info__image">
+                <img class="photo" src="images/avatar.jpg" alt="Это моя фотка кароч">
+            </div>
         </main>
         <hr>
         <!-- Блок 2 (Инофрмация о себе) -->
